test/param/loop/paramForLoopWrongTypeLow.good
paramForLoopWrongTypeLow.chpl:1: error: Ranges defined using bounds of type 'string..int(64)' are not currently supported
