test/param/loop/paramForLoopWrongTypeLow.chpl
for param i in ""..4#2 {
    writeln(i);
} 